# StreamXfer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  mkdocs.yml  requirements.txt  setup.py
.github/workflows/: docker-build.yml  docs.yml  pypi-publish.yml  wheel-builder.yml
crates/streamxfer-cli/: Cargo.toml
crates/streamxfer-cli/src/: main.rs
crates/streamxfer-core/: Cargo.toml
crates/streamxfer-core/src/: config.rs  error.rs  lib.rs
crates/streamxfer-core/src/arrow_pipeline/: mod.rs
crates/streamxfer-core/src/checkpoint/: mod.rs
crates/streamxfer-core/src/parquet_pipeline/: mod.rs
crates/streamxfer-core/src/planner/: catalog.rs  mod.rs  partition.rs  scope.rs
crates/streamxfer-core/src/runtime/: engine.rs  executor.rs  limits.rs  mod.rs
crates/streamxfer-core/src/schema/: mapping.rs
crates/streamxfer-core/src/sink/: storage.rs
crates/streamxfer-core/src/source/: mod.rs  mssql.rs
crates/streamxfer-core/tests/: catalog_and_config.rs  config_validation.rs  export_planning.rs  export_scopes.rs  mssql_source.rs  parquet_config.rs  planner_runtime.rs  schema_arrow_mapping.rs  source_schema_runtime.rs  storage_checkpoint.rs  storage_checkpoint_extended.rs
crates/streamxfer-py/: Cargo.toml
crates/streamxfer-py/src/: lib.rs
docs/: index.md
docs/architecture/: overview.md  pipeline.md
docs/development/: contributing.md  local-testing.md
docs/getting-started/: installation.md  quick-start.md
docs/guide/: checkpoint.md  cli-reference.md  configuration.md  python-bindings.md  storage.md
scripts/: benchmark_acceptance.py
streamxfer/: __init__.py  cmd.py  compress.py  format.py  log.py  mssql.py  sink.py  typing.py  utils.py
streamxfer/cli/: main.py  mssql_csv_escape.py  mssql_escape.py  mssql_json_escape.py  redshift_escape.py
tests/docker/: Dockerfile.seeder  README.md
tests/docker/data-seeder/: Cargo.toml
tests/docker/data-seeder/src/: main.rs
tests/docker/sql/: 00_setup.sql  01_seed.sql  run-seeder.sh
tests/fixtures/: current_behavior.json
