[workspace]
resolver = "2"
members = [
    "crates/streamxfer-core",
    "crates/streamxfer-cli",
    "crates/streamxfer-py",
]
exclude = [
    "tests/docker/data-seeder",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/zhiweio/StreamXfer"

[workspace.dependencies]
anyhow = "1"
arrow = { version = "55", features = ["prettyprint"] }
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
globset = "0.4"
hex = "0.4"
object_store = { version = "0.12", features = ["aws"] }
parquet = { version = "55", features = ["async"] }
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py39"] }
rocksdb = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "chrono"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2"
zstd = "0.13"
