[package]
name = "streamxfer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "stx"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
streamxfer-core = { path = "../streamxfer-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
