[package]
name = "streamxfer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
rocksdb-checkpoint = ["dep:rocksdb"]

[dependencies]
arrow.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
flate2.workspace = true
globset.workspace = true
hex.workspace = true
object_store.workspace = true
parquet.workspace = true
rocksdb = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tiberius.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
zstd.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
